tetrate/tis1103/e2e/bad-resouces.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-virtual-service-1
  namespace: default
spec:
  hosts:
  - "my-app.example.com"
  http:
  - route:
    - destination:
        host: "my-app-service.default.svc.cluster.local"
      weight: 100
