tetrate/tis1103/e2e/good-resource-2.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-virtual-service-good-2
  namespace: default
spec:
  hosts:
  - "my-app.example.com"
  http:
  - route:
    - destination:
        host: "my-app-service-v1.default.svc.cluster.local"
      weight: 80
    - destination:
        host: "my-app-service-v2.default.svc.cluster.local"
      weight: 20
