tetrate/tis1103/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-virtualservice-weights
spec:
  validationFailureAction: Enforce
