tetrate/tis1103/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validate-virtualservice-weights
spec:
  steps:
    - name: apply-rbac-policy
      try:
        - apply:
            file: rbac-policy.yaml

    - name: apply-kyverno-policy
      try:
        - apply:
            file: ../validate-virtualservice-weights.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-valid-virtualservice
      try:
        - apply:
            file: good-resource.yaml

    - name: apply-valid-virtualservice
      try:
        - apply:
            file: good-resource-2.yaml

    - name: apply-invalid-virtualservice (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml
